# NeutronStarLite

./: .gitignore  CMakeCache.txt  CMakeLists.txt  NTS_cora_data.cfg  README.md  cleancmake.sh  cmake_install.cmake  commnet_cora.cfg  copy_all.sh  cora_config.cfg  gat_cora.cfg  gcn_citeseer.cfg  gcn_citeseer_sample.cfg  gcn_cora.cfg  gcn_cora_sample.cfg  gcn_pubmed.cfg  gcn_pubmed_sample.cfg  gcn_reddit.cfg  gcn_reddit_full.cfg  gcn_reddit_sample.cfg  gin_cora.cfg  make.sh  make_and_copy.sh  myfistapp.cpp  pagerank.cpp  run.sh  run_dist.sh  run_dist_google.sh  run_nts.sh  run_nts_dist.sh  test.sh  update_log
comm/: Network.hpp  logger.h  network.cpp  network.h
core/: AutoDiff.cpp  AutoDiff.h  AutoDiff.hpp  CMakeLists.txt  FullyRepGraph.hpp  GraphSegment.cpp  GraphSegment.h  GraphSegment.hpp  Makefile  NtsEdgeTensor.hpp  NtsScheduler.hpp  PartitionedGraph.hpp  TEMP.cpp  _AutoDiff.cpp  _gnnmini.cpp  _gnnmini.h  atomic.hpp  bitmap.cpp  bitmap.h  bitmap.hpp  bitmap2.cpp  bitmap2.h  cmake_install.cmake  constants.hpp  coocsc.hpp  filesystem.hpp  gcn.hpp  gnnmini.cpp  gnnmini.h  gnnmini.hpp  gnnmini_conflict.hpp  gnnmini_legacy.hpp  graph.hpp  graph_2022_5_13.hpp  graph_legacy.hpp  input.cpp  input.h  input.hpp  math.hpp  neutronstar.hpp  (+19 more)
cuda/: CMakeLists.txt  LEGACY_CODE.cu  Makefile  _ntsCUDAGraphKernel_1.cuh  cmake_install.cmake  cuda_type.h  main.cpp  ntsCUDA.hpp  ntsCUDADistKernel.cuh  ntsCUDAFuseKernel.cuh  ntsCUDAGraphKernel.cuh  ntsCUDAGraphOP.cu  ntsCUDATransferKernel.cuh  propagate.cuh  run.sh  test.hpp  test_propagate  test_propagate.cu  untitled
cuda/graphs/: common.h  csr_graph.h
data/: README.md  README.txt  cora.2708.edge  cora.2708.edge.self  cora.2708.edge.self_write  cora.2708.edge.self_write2208  cora.labeltable  cora.mask  extra_train  extract_train.cpp  generate_nts_dataset.py  requirements.txt
data/OGBData/: ReadMe.txt  convert2binary  convert2binary.cpp  generate_edge_from_csv.cpp  run.sh  transOGBData_To_NeutronStarData.py
data/reddit/: extract_train.cpp  load_data.py  note_for_input.txt
dep/gemini/: atomic.hpp  bitmap.hpp  constants.hpp  type.hpp
test/: test.cfg  testcsr.cpp
toolkits/: CMakeLists.txt  COMMNET_GPU.hpp  GAT.hpp  GAT_CPU.hpp  GAT_CPU_DIST.hpp  GAT_CPU_DIST_OPTM.hpp  GAT_GPU.hpp  GAT_GPU_DIST.hpp  GAT_GPU_SINGLE.hpp  GCN.hpp  GCN_CPU.hpp  GCN_CPU_EAGER.hpp  GCN_CPU_OLD.hpp  GCN_CPU_SAMPLE.hpp  GCN_CPU_SELFNN.hpp  GCN_CPU_TEST.hpp  GCN_EAGER.hpp  GCN_EAGER_single.hpp  GGNN_CPU.hpp  GIN.hpp  GIN_CPU.hpp  GIN_GPU.hpp  Gnn12.26  bc  bfs  cc  compute.cpp  compute_GPU.cpp  compute_dist_GPU.cpp  compute_single_GPU.cpp  cpuengine.hpp  gnn_2layer 11.15.cpp  gnn_single_layer.cpp  gpuclusterengine.hpp  gpuengine.hpp  main.cpp  pagerank  pagerank (copy).cpp  pagerank.cpp  pagerank_citeseer_GCN.cpp  (+10 more)
